# behemoth-location-tool

./: .gitignore  README.md  pyproject.toml  run_tool.bat  smoke_preview.bat
docs/: LocationToolDesignSpec.md
examples/: project.json
projects/: behemoth.json
scripts/: bootstrap.ps1  run.ps1  smoke_preview.py  test_tool.bat  validate.ps1
src/behemoth_location_tool/: __init__.py  __main__.py  app.py
src/behemoth_location_tool/generation/: ambient_fill.py  ambient_fill_pass.py  candidate_filter.py  deterministic_rng.py  exclusive_groups.py  explicit_pass.py  generation_service.py  placement_pass.py
src/behemoth_location_tool/io/: entity_loader.py  json_io.py  location_factory.py  locations_loader.py  (+2 more)
tests/: conftest.py  test_background_inheritance.py  test_editor_roundtrip.py  test_entity_loader.py  test_generate_inherited_sockets.py  test_generate_tab_workflow.py  test_generation_service_stage5.py  test_graph_status_stage8.py  test_graph_tab_stage8.py  test_id_utils.py  test_import.py  test_loaders.py  test_locations_stage5a.py  test_locations_tab_default_back_exit.py  test_preview_controller.py  test_project_paths.py  test_project_tab_and_main_window.py  test_room_catalog_undo_stage9.py  test_room_model.py  test_room_snapshot.py  test_runtime_validator.py  test_schema_validation.py  test_socket_inheritance.py  test_stage12a.py  test_stage13a.py  test_stage14a.py  test_startup_loading.py  test_tags_model.py  test_undo_commands_stage9.py  test_validate_tab_actions.py  test_validation.py  test_validation_service_stage6.py
tests/fixtures/: __init__.py
(+40 files in other folders)
