[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "behemoth-location-tool"
version = "0.1.0"
description = "Python authoring tool for Behemoth mansion locations, sockets, entities, and preview snapshots."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "Opposing Forces Entertainment" }]
dependencies = ["PySide6>=6.7", "pydantic>=2.8", "jsonschema>=4.22", "Pillow>=10.4"]

[project.optional-dependencies]
dev = ["pytest>=8.2", "ruff>=0.6", "mypy>=1.11"]

[project.scripts]
behemoth-location-tool = "behemoth_location_tool.app:main"

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_return_any = true

[tool.pytest.ini_options]
testpaths = ["tests"]
